Fix scrollbar

--- a/src/react/App.css
+++ b/src/react/App.css
@@ -1,8 +1,9 @@
 main {
+  height: calc(100vh - 48px);
   margin-top: 48px;
   overflow-y: scroll;
 }
-/* main::-webkit-scrollbar {
+main::-webkit-scrollbar {
   width: 20px;
 }
 main::-webkit-scrollbar-corner {
@@ -12,10 +13,10 @@ main::-webkit-scrollbar-thumb {
   background-color: #eee;
   border-radius: 6px;
   border: 4px solid rgba(0,0,0,0);
-  background-clip: content-box;
+  background-clip: content-box; 
   min-width: 32px;
   min-height: 32px;
 }
 main::-webkit-scrollbar-track {
   background-color: rgba(0,0,0,0);
-} */
+}
